# samsung-notes-format

./: .gitignore  2025-10-09-understand-all-the-files-in-this-project-i-want-y.txt  LICENSE  README.md  RESEARCH.md  REVERSE_ENGINEERING_WORKFLOW.md  cli.py  fileToList.py  listToFile.py  output.json  plot_strokes.py  pyproject.toml  render.py  sdocx_extractor.py  sdocx_gcode.py
.opencode/commands/: reverse-engineer.md
blog-artifacts/: README.md  fig_bitlayout.py  fig_boxed.py  fig_coverage.py  fig_format.py  fig_grid.py  fig_grid_all.py  fig_object.py  lib.py
blog-artifacts/harness/: Cargo.toml  main.rs
claude_rambling/: 2025-10-09-read-all-the-files-in-this-project-and-explain-wha.txt  advanced_stroke_decoder.py  analysis_Mako OT N problem still exists_251002_005645.json  complete_note_analyzer.py  comprehensive_extractor.py  decoded_Mako OT N problem still exists_251002_005645.json  deep_format_analyzer.py  extract_final.py  extract_notes_clean.py  extract_notes_improved.py  extract_simple.py  final_stroke_visualizer.py  format_analysis.py  simple_stroke_display.py  ultimate_analysis_Mako OT N problem still exists_251002_005645.json  ultimate_stroke_analyzer.py  visualize_strokes.py
extracted_sdocx/: 243e1166-a480-11f0-906e-2f736af9493c.page  note.note
samsung_notes_profiles/: __init__.py  grbl_plotter_z.toml
sdocxFiles/: Eg walker O(n^2) case_250527_190920.sdocx  Mako OT N problem still exists Minimal dub_260129_190327.sdocx  Mako OT N problem still exists_251002_005645 (1).sdocx  ThisIsTheTitle_251009_012211.sdocx  ThisIsTheTitle_251009_042302.sdocx
(+18 files in other folders)
